syntax = "proto3";

// Define the service
service Categories {
  rpc AllCategory(CategoryEmptyRequest) returns (stream Category) {}
  rpc CategoryById(CategoryByIdRequest) returns (stream Category) {}
  rpc CategoryByParent(CategoryEmptyRequest) returns (stream Category) {}
}

// Define message formats
message CategoryEmptyRequest {}

message CategoryByIdRequest { string category_id = 1; }
message CategoryByParentIdRequest { string parent_id = 1; }

message Category {
  string id = 1;
  string name = 2;
  repeated string images = 3;
}
